--- a/EWHC_FRANCHISING/Login.xaml
+++ b/EWHC_FRANCHISING/Login.xaml
@@ -132,11 +132,11 @@
         <Label x:Name="esc" HorizontalContentAlignment="Center" 
                Content="[ Press ESC to Exit ]"
                HorizontalAlignment="Left"
-               Margin="98,170.892,0,0" 
+               Margin="10,168,0,0" 
                VerticalAlignment="Top" 
                FontStyle="Italic" 
                Foreground="Gray" 
-               Width="110" MouseEnter="esc_MouseEnter" MouseLeave="esc_MouseLeave" MouseLeftButtonDown="esc_MouseLeftButtonDown" Grid.ColumnSpan="2" Grid.Row="1"/>
+               Width="110" MouseEnter="esc_MouseEnter" MouseLeave="esc_MouseLeave" MouseLeftButtonDown="esc_MouseLeftButtonDown" Grid.Row="1" Grid.Column="1"/>
 
         <Ellipse x:Name="ellipse" 
                  Margin="120,26.892,118,109" 
@@ -182,6 +182,7 @@
                Width="308" Grid.ColumnSpan="2" Grid.Row="1"/>
         <Label x:Name="ppword" Foreground="Gray" Content="PASSWORD" HorizontalAlignment="Left" Margin="40,60.892,0,0" VerticalAlignment="Top" Height="55" Width="201" VerticalContentAlignment="Bottom" FontSize="16" MouseLeftButtonDown="ppword_MouseLeftButtonDown" Grid.ColumnSpan="2" Grid.Row="1"/>
         <Label Content="FRANCHISING SYSTEM" HorizontalContentAlignment="Center" VerticalAlignment="Top" Grid.ColumnSpan="2" FontSize="10" FontWeight="Bold" Foreground="#FF493636" FontFamily="Century Gothic"/>
+        <Label x:Name="label" Content="12/29/2022 UPDATE" HorizontalAlignment="Left" Margin="10,168,0,0" Grid.Row="1" VerticalAlignment="Top"/>
 
     </Grid>
     <Window.Resources>
